assets/scss/base/_typography.scss
h1,h2,h3,h4,h5,h6 {
    display: block;
    color: $primary;
    margin-bottom: 10px;
}
h1 {
    font-size: 2.2rem;
    line-height: 3rem;   
    
    @media (min-width: 768px){
      font-size: 3rem;
      line-height: 3.3rem;
    }

    @media (min-width: 992px){
      font-size: 3.8rem;
      line-height: 3.8rem;
    }
}

h2 {
    font-size: 2rem;
    line-height: 2.2rem;
}

h3 {
      font-size: 1.8rem;
      line-height:2rem;
  

    a {
      text-decoration: none;
      &:hover {
        text-decoration: underline;
      }
    }
}

h4 {
    font-size: 1.6rem;
    line-height:2rem;

}

h5 {
    font-size: 1.2rem;
    line-height:1.6rem;

}

h6 {
    font-size: 1rem;
    line-height: 1.2rem;

}
main p {
    margin-bottom: 0.875em;
    line-height: 2rem;
}

main h1 {
  margin-bottom: 20px;
}
main a {
    color: $secondary;
    text-decoration: none;
    &:hover {
        color: $yellow;
        text-decoration: underline;
    }
}
table {
    margin: 0.3125em 0;
    th {
        background-color: $gray;

    }
    th, td {
        padding: 0.3125em;
        border: 1px solid $gray;
    }
}
address {
    display: block;
    font-style: italic;
  }

 main ul, ol {
    margin: 10px 20px;
    li {
        li {
            padding-left: 20px;
            line-height: 2rem;
        }
    }
  }
  code {
    color: crimson;
    background-color: #f1f1f1;
    padding: 2px;
    font-size: 105%;
  }

  pre {
    display: block;
    font-family: monospace;
    white-space: pre;
    margin: 2em 0;
    background-color: $gray;
    border-left: 5px solid $primary;
    position: relative;
    overflow: scroll;
    padding: 20px;
  }
  q {
    color: gray;
    font-style: italic;
  }
  dl {
    display: block;
    margin-top: 1em;
    margin-bottom: 1em;
    margin-left: 0;
    margin-right: 0;
  }
  dt {
    display: block;
    background-color: $gray;
    padding: 10px;
    font-weight: bold;

  }
  dd {
    padding: 10px 20px;
  }
  blockquote {
    background-color: $primary;
    border-left: 5px solid $secondary;
    color: $white;
    padding: 10px;
  }
  cite {
    background-color: $gray;
    padding: 10px 20px;
    margin-left: 10px;
    font-style: italic;
  }
.subheading {
    font-weight: 100;
    font-size: 1.2rem;
    line-height: 1.6rem;
    margin: 0 0 60px 0;
    padding: 0 10px;


}

